# ccapi-rs

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md  build.rs
app/: CMakeLists.txt
app/src/market_data_subscription/: CMakeLists.txt  main.cpp
cxx/: ITradeclient.h
examples/: test.rs
src/: lib.rs
